@@ -20,13 +20,14 @@ zip:
 		then cp build/fullcalendar.min.js build/fullcalendar-${VER}/fullcalendar;\
 		else echo "\n!!! WARNING: fullcalendar.js not yet minified.\n";\
 		fi
-	@rm -rf `find build -type d -name .svn`
+	@rm -rf `find build/fullcalendar-* -type d -name .svn`
 	@for f in build/fullcalendar-${VER}/fullcalendar/*.js; do\
 		sed -i "s/* FullCalendar/& v${VER}/" $$f;\
 		sed -i "s/* Date:/& ${DATE}/" $$f;\
 		sed -i "s/* Revision:/& ${REV}/" $$f;\
 		done
 	@cd build; zip -r fullcalendar-${VVER}.zip fullcalendar-${VVER}
+	@mkdir -p dist
 	@mv build/fullcalendar-${VER}.zip dist
 	@rm -rf build/fullcalendar-${VER}
 	@rm -f build/fullcalendar.min.js
