@@ -101,6 +101,8 @@ function removeTestEvents(therepeating) {
 <a href='#' onclick="$('#calendar').fullCalendar('today')">today</a> &nbsp;
 <a href='#' onclick="$('#calendar').fullCalendar('prevMonth')">prev</a> &nbsp;
 <a href='#' onclick="$('#calendar').fullCalendar('nextMonth')">next</a> &nbsp;
+<a href='#' onclick="$('#calendar').fullCalendar('prevYear')">prevyear</a> &nbsp;
+<a href='#' onclick="$('#calendar').fullCalendar('nextYear')">nextyear</a> &nbsp;
 <a href='#' onclick="$('#calendar').fullCalendar('gotoMonth', 1986, 5)">June 1986</a>
 </p>
 <div id='calendar' style='width:75%'></div>
